plugins/PluginProperty: Cleanup Java9+ deprecation of newInstance.